// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.27.0

package admin

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type CommanderDamage struct {
	GameID     pgtype.UUID `json:"game_id"`
	AttackerID pgtype.UUID `json:"attacker_id"`
	DefenderID pgtype.UUID `json:"defender_id"`
	Amount     int32       `json:"amount"`
}

type Deck struct {
	ID         pgtype.UUID      `json:"id"`
	UserID     pgtype.UUID      `json:"user_id"`
	Name       string           `json:"name"`
	Commander  string           `json:"commander"`
	MoxfieldID pgtype.Text      `json:"moxfield_id"`
	CreatedAt  pgtype.Timestamp `json:"created_at"`
	UpdatedAt  pgtype.Timestamp `json:"updated_at"`
	ImageUrl   pgtype.Text      `json:"image_url"`
}

type DeckResyncJob struct {
	ID           pgtype.UUID      `json:"id"`
	UserID       pgtype.UUID      `json:"user_id"`
	Status       string           `json:"status"`
	TotalDecks   int32            `json:"total_decks"`
	UpdatedCount int32            `json:"updated_count"`
	FailedCount  int32            `json:"failed_count"`
	ErrorMessage pgtype.Text      `json:"error_message"`
	CreatedAt    pgtype.Timestamp `json:"created_at"`
	UpdatedAt    pgtype.Timestamp `json:"updated_at"`
	FinishedAt   pgtype.Timestamp `json:"finished_at"`
}

type DeckStatisticsSummary struct {
	DeckID                    pgtype.UUID      `json:"deck_id"`
	GamesPlayed               pgtype.Int4      `json:"games_played"`
	GamesWon                  pgtype.Int4      `json:"games_won"`
	HighestLifeTotalAchieved  pgtype.Int4      `json:"highest_life_total_achieved"`
	TotalCommanderDamageDealt pgtype.Int4      `json:"total_commander_damage_dealt"`
	LastRecalculatedAt        pgtype.Timestamp `json:"last_recalculated_at"`
}

type EmailVerificationToken struct {
	ID        pgtype.UUID      `json:"id"`
	UserID    pgtype.UUID      `json:"user_id"`
	TokenHash string           `json:"token_hash"`
	ExpiresAt pgtype.Timestamp `json:"expires_at"`
	CreatedAt pgtype.Timestamp `json:"created_at"`
	UsedAt    pgtype.Timestamp `json:"used_at"`
}

type FriendRequest struct {
	ID          pgtype.UUID      `json:"id"`
	RequesterID pgtype.UUID      `json:"requester_id"`
	AddresseeID pgtype.UUID      `json:"addressee_id"`
	Status      string           `json:"status"`
	CreatedAt   pgtype.Timestamp `json:"created_at"`
	RespondedAt pgtype.Timestamp `json:"responded_at"`
}

type Game struct {
	ID                  pgtype.UUID      `json:"id"`
	PlaygroupID         pgtype.UUID      `json:"playgroup_id"`
	Status              string           `json:"status"`
	StartedAt           pgtype.Timestamp `json:"started_at"`
	FinishedAt          pgtype.Timestamp `json:"finished_at"`
	CreatedAt           pgtype.Timestamp `json:"created_at"`
	CurrentTurnPlayerID pgtype.UUID      `json:"current_turn_player_id"`
}

type GameAction struct {
	ID         pgtype.UUID      `json:"id"`
	GameID     pgtype.UUID      `json:"game_id"`
	ActorID    pgtype.UUID      `json:"actor_id"`
	TargetID   pgtype.UUID      `json:"target_id"`
	ActionType string           `json:"action_type"`
	Payload    []byte           `json:"payload"`
	CreatedAt  pgtype.Timestamp `json:"created_at"`
}

type GamePlayer struct {
	ID                 pgtype.UUID `json:"id"`
	GameID             pgtype.UUID `json:"game_id"`
	UserID             pgtype.UUID `json:"user_id"`
	DeckID             pgtype.UUID `json:"deck_id"`
	LifeTotal          pgtype.Int4 `json:"life_total"`
	PoisonCounters     pgtype.Int4 `json:"poison_counters"`
	EnergyCounters     pgtype.Int4 `json:"energy_counters"`
	ExperienceCounters pgtype.Int4 `json:"experience_counters"`
	IsEliminated       pgtype.Bool `json:"is_eliminated"`
	AddedBy            pgtype.UUID `json:"added_by"`
}

type MoxfieldImportJob struct {
	ID               pgtype.UUID      `json:"id"`
	UserID           pgtype.UUID      `json:"user_id"`
	MoxfieldUsername string           `json:"moxfield_username"`
	Status           string           `json:"status"`
	TotalDecks       pgtype.Int4      `json:"total_decks"`
	ImportedCount    int32            `json:"imported_count"`
	FailedCount      int32            `json:"failed_count"`
	ErrorMessage     pgtype.Text      `json:"error_message"`
	CreatedAt        pgtype.Timestamp `json:"created_at"`
	UpdatedAt        pgtype.Timestamp `json:"updated_at"`
	FinishedAt       pgtype.Timestamp `json:"finished_at"`
}

type Playgroup struct {
	ID        pgtype.UUID      `json:"id"`
	Name      string           `json:"name"`
	CreatedAt pgtype.Timestamp `json:"created_at"`
	UpdatedAt pgtype.Timestamp `json:"updated_at"`
}

type PlaygroupMember struct {
	PlaygroupID pgtype.UUID      `json:"playgroup_id"`
	UserID      pgtype.UUID      `json:"user_id"`
	JoinedAt    pgtype.Timestamp `json:"joined_at"`
}

type RefreshToken struct {
	ID        pgtype.UUID      `json:"id"`
	UserID    pgtype.UUID      `json:"user_id"`
	TokenHash string           `json:"token_hash"`
	ExpiresAt pgtype.Timestamp `json:"expires_at"`
	CreatedAt pgtype.Timestamp `json:"created_at"`
	RevokedAt pgtype.Timestamp `json:"revoked_at"`
}

type Tournament struct {
	ID            pgtype.UUID      `json:"id"`
	OrganizerID   pgtype.UUID      `json:"organizer_id"`
	Name          string           `json:"name"`
	Format        string           `json:"format"`
	TargetPlayers pgtype.Int4      `json:"target_players"`
	Status        string           `json:"status"`
	RoundCount    pgtype.Int4      `json:"round_count"`
	CurrentRound  int32            `json:"current_round"`
	JoinCode      string           `json:"join_code"`
	CreatedAt     pgtype.Timestamp `json:"created_at"`
	StartedAt     pgtype.Timestamp `json:"started_at"`
	FinishedAt    pgtype.Timestamp `json:"finished_at"`
}

type TournamentParticipant struct {
	ID            pgtype.UUID      `json:"id"`
	TournamentID  pgtype.UUID      `json:"tournament_id"`
	UserID        pgtype.UUID      `json:"user_id"`
	GuestName     pgtype.Text      `json:"guest_name"`
	DeckID        pgtype.UUID      `json:"deck_id"`
	CommanderName pgtype.Text      `json:"commander_name"`
	Points        int32            `json:"points"`
	CreatedAt     pgtype.Timestamp `json:"created_at"`
}

type TournamentRound struct {
	ID           pgtype.UUID      `json:"id"`
	TournamentID pgtype.UUID      `json:"tournament_id"`
	RoundNumber  int32            `json:"round_number"`
	Status       string           `json:"status"`
	CreatedAt    pgtype.Timestamp `json:"created_at"`
	FinishedAt   pgtype.Timestamp `json:"finished_at"`
}

type TournamentTable struct {
	ID                pgtype.UUID `json:"id"`
	TournamentRoundID pgtype.UUID `json:"tournament_round_id"`
	TableNumber       int32       `json:"table_number"`
}

type TournamentTableSeat struct {
	ID                      pgtype.UUID `json:"id"`
	TournamentTableID       pgtype.UUID `json:"tournament_table_id"`
	TournamentParticipantID pgtype.UUID `json:"tournament_participant_id"`
	FinishPosition          pgtype.Int4 `json:"finish_position"`
	PointsAwarded           int32       `json:"points_awarded"`
}

type User struct {
	ID               pgtype.UUID      `json:"id"`
	Username         string           `json:"username"`
	Email            string           `json:"email"`
	PasswordHash     pgtype.Text      `json:"password_hash"`
	CreatedAt        pgtype.Timestamp `json:"created_at"`
	UpdatedAt        pgtype.Timestamp `json:"updated_at"`
	GoogleID         pgtype.Text      `json:"google_id"`
	MoxfieldUsername pgtype.Text      `json:"moxfield_username"`
	EmailVerified    bool             `json:"email_verified"`
	IsAdmin          bool             `json:"is_admin"`
	IsActive         bool             `json:"is_active"`
}

type UserStatisticsSummary struct {
	UserID                    pgtype.UUID      `json:"user_id"`
	GamesPlayed               pgtype.Int4      `json:"games_played"`
	GamesWon                  pgtype.Int4      `json:"games_won"`
	TotalDamageDealt          pgtype.Int4      `json:"total_damage_dealt"`
	TotalCommanderDamageDealt pgtype.Int4      `json:"total_commander_damage_dealt"`
	TotalEliminations         pgtype.Int4      `json:"total_eliminations"`
	LastRecalculatedAt        pgtype.Timestamp `json:"last_recalculated_at"`
}
