Project CommanderCompanion {
  database_type: 'PostgreSQL'
  Note: 'Database schema for Commander Companion'
}

Table users {
  id uuid [primary key]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password_hash varchar [note: 'Nullable: accounts created via Google do not have a password']
  google_id varchar [unique, note: 'Google sub (id_token). Nullable: email/password accounts do not have it']
  created_at timestamp [default: `now()`]
  updated_at timestamp
  moxfield_username varchar [note: 'Linked Moxfield username (optional, no uniqueness). Migration 00009_moxfield_username.sql']
  email_verified boolean [not null, default: true, note: 'Default true: existing accounts and Google sign-ups (already confirmed by their id_token) are left verified. Only email/password sign-up forces false. Migration 00011_email_verification.sql']
  is_admin boolean [not null, default: false, note: 'Grants access to the admin dashboard (GET/PATCH /admin/*). Promoted by hand in the DB, no self-service UI. Migration 00018_admin_and_account_status.sql, see ADR-0018']
  is_active boolean [not null, default: true, note: 'False = account deactivated by an admin: blocks login and refresh, does not delete data. Migration 00018_admin_and_account_status.sql, see ADR-0018']

  Note: 'CHECK: password_hash IS NOT NULL OR google_id IS NOT NULL'
}

Table refresh_tokens {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar [unique, not null, note: 'SHA-256 of the refresh token; the plaintext token is never persisted']
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  revoked_at timestamp [note: 'Set on logout or when the token is rotated']
}

Table email_verification_tokens {
  id uuid [primary key]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar [unique, not null, note: 'SHA-256 of the verification token; the plaintext token is never persisted']
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  used_at timestamp [note: 'Set when the email is verified with this token (single use). Migration 00011_email_verification.sql']
}

Table decks {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  name varchar [not null]
  commander varchar [not null]
  moxfield_id varchar
  image_url varchar [note: 'Commander art crop (Moxfield), migration 00006_deck_image_url.sql']
  created_at timestamp [default: `now()`]
  updated_at timestamp

  indexes {
    moxfield_id [note: 'Lookup/de-dup of Moxfield imports (migration 00003_indices.sql)']
    (user_id, moxfield_id) [unique, note: 'One deck per user per Moxfield public ID, NULLs excluded (migration 00015_decks_unique_moxfield_id_per_user.sql)']
    (user_id, created_at, id) [note: 'Keyset pagination over (created_at, id) scoped to one user. Actually created DESC on both sort columns; DBML cannot express index sort order (migration 00005_pagination_indices.sql)']
  }
}

Table playgroups {
  id uuid [primary key]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table playgroup_members {
  playgroup_id uuid [ref: > playgroups.id]
  user_id uuid [ref: > users.id]
  joined_at timestamp [default: `now()`]

  indexes {
    (playgroup_id, user_id) [pk]
    user_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
  }
}

Table games {
  id uuid [primary key]
  playgroup_id uuid [ref: > playgroups.id, null, note: 'Optional if the game belongs to a playgroup']
  status varchar [not null, note: 'pending, active, finished']
  started_at timestamp
  finished_at timestamp
  created_at timestamp [default: `now()`]
  current_turn_player_id uuid [ref: > game_players.id, null, note: 'Whose turn it is now (does not model turn order). Migration 00008_current_turn.sql']

  indexes {
    playgroup_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
    current_turn_player_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
    (created_at, id) [note: 'Keyset pagination over the global game history. Actually created DESC on both columns; DBML cannot express index sort order (migration 00005_pagination_indices.sql)']
  }

  Note: 'CHECK: status IN (\'pending\', \'active\', \'finished\') (migration 00004_status_constraints.sql)'
}

Table game_players {
  id uuid [primary key]
  game_id uuid [ref: > games.id]
  user_id uuid [ref: > users.id]
  deck_id uuid [ref: > decks.id]
  life_total int [default: 40]
  poison_counters int [default: 0]
  energy_counters int [default: 0]
  experience_counters int [default: 0]
  is_eliminated boolean [default: false]
  added_by uuid [ref: > users.id, null, note: 'Who added them if not themselves (proxy-join in Group mode, see ADR-0013). Migration 00012_game_player_proxy_join.sql']

  indexes {
    game_id [note: 'Hot path for reading the players of a game (migration 00003_indices.sql)']
    user_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
    deck_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
    added_by [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
  }
}

Table game_actions {
  id uuid [primary key]
  game_id uuid [ref: > games.id]
  actor_id uuid [ref: > game_players.id, note: 'Who performs or is the source of the action']
  target_id uuid [ref: > game_players.id, note: 'Who it is performed on (optional)']
  action_type varchar [not null, note: 'E.g.: LifeChange, CombatDamage, CommanderDamage, PoisonCounter, TurnStart, TurnEnd, Elimination']
  payload jsonb [note: 'E.g. for CommanderDamage: {"amount": 7, "commander_deck_id": "uuid"}']
  created_at timestamp [default: `now()`]

  indexes {
    game_id [note: 'Hot path for reading the timeline of a game (migration 00003_indices.sql)']
    actor_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
    target_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
  }

  Note: 'CHECK: action_type IN (\'LifeChange\', \'CombatDamage\', \'CommanderDamage\', \'PoisonCounter\', \'TurnStart\', \'TurnEnd\', \'Elimination\') (migration 00004_status_constraints.sql)'
}

Table commander_damage {
  game_id uuid [ref: > games.id]
  attacker_id uuid [ref: > game_players.id, note: 'Player whose commander dealt the damage']
  defender_id uuid [ref: > game_players.id, note: 'Player who received the damage']
  amount int [not null, default: 0, note: 'Accumulated damage from this attacker to this defender in the game']

  indexes {
    (attacker_id, defender_id) [pk]
    game_id [note: 'Migration 00007_commander_damage.sql']
    defender_id [note: 'FK coverage, migration 00014_deck_resync_rls_and_fk_indexes.sql']
  }

  Note: 'CHECK: attacker_id <> defender_id, amount >= 0 (migration 00007_commander_damage.sql). 21+ from the same attacker_id eliminates the defender_id (actual Commander rule), independent of game_players.life_total'
}

// Pre-calculated statistics (recalculated if a historical game is modified)
Table user_statistics_summary {
  user_id uuid [primary key, ref: - users.id]
  games_played int [default: 0]
  games_won int [default: 0]
  total_damage_dealt int [default: 0]
  total_commander_damage_dealt int [default: 0]
  total_eliminations int [default: 0]
  last_recalculated_at timestamp [default: `now()`]
}

Table deck_statistics_summary {
  deck_id uuid [primary key, ref: - decks.id]
  games_played int [default: 0]
  games_won int [default: 0]
  highest_life_total_achieved int [default: 0]
  total_commander_damage_dealt int [default: 0]
  last_recalculated_at timestamp [default: `now()`]
}

// Bulk, asynchronous import of all public decks of a Moxfield user
// (see internal/moxfieldimport). Aggregated counters, not one item per deck.
Table moxfield_import_jobs {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  moxfield_username varchar [not null]
  status varchar [not null, default: 'pending', note: 'pending, in_progress, completed, failed']
  total_decks int [null]
  imported_count int [not null, default: 0]
  failed_count int [not null, default: 0]
  error_message varchar [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  finished_at timestamp

  indexes {
    (user_id) [name: 'moxfield_import_jobs_active_user_idx', note: 'Partial UNIQUE WHERE status IN (pending, in_progress) -- only one active job per user. Migration 00010_moxfield_import_jobs.sql']
  }

  Note: 'CHECK: status IN (\'pending\', \'in_progress\', \'completed\', \'failed\') (migration 00010_moxfield_import_jobs.sql)'
}

// Background re-sync of ALL of a user's already-imported decks that have a
// moxfield_id (see internal/deckresync) -- different from moxfield_import_jobs,
// which brings in NEW decks from a username. Same shape (aggregate counters,
// not one item per deck). Migration 00013_deck_resync_jobs.sql.
Table deck_resync_jobs {
  id uuid [primary key]
  user_id uuid [ref: > users.id]
  status varchar [not null, default: 'pending', note: 'pending, in_progress, completed, failed']
  total_decks int [not null]
  updated_count int [not null, default: 0]
  failed_count int [not null, default: 0]
  error_message varchar [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  finished_at timestamp

  indexes {
    (user_id) [name: 'deck_resync_jobs_active_user_idx', note: 'Partial UNIQUE WHERE status IN (pending, in_progress) -- only one active job per user, same reason as moxfield_import_jobs. Migration 00013_deck_resync_jobs.sql']
  }

  Note: 'CHECK: status IN (\'pending\', \'in_progress\', \'completed\', \'failed\') (migration 00013_deck_resync_jobs.sql)'
}

// Standalone Swiss-format Commander tournament (not tied to a playgroup). Organizer
// creates it, participants register via join_code, the organizer starts it once the
// roster is ready (see internal/tournaments/pairing.go for round_count/table-size
// rules) and records each table's result manually -- not wired into games/game_players,
// see ADR-0016. Migration 00016_tournaments.sql.
Table tournaments {
  id uuid [primary key]
  organizer_id uuid [ref: > users.id, not null]
  name varchar [not null]
  format varchar [not null, default: 'commander']
  target_players int [null, note: 'Display-only planning target set at creation, not enforced']
  status varchar [not null, default: 'registration', note: 'registration, in_progress, finished']
  round_count int [null, note: 'Computed and locked in when the tournament starts']
  current_round int [not null, default: 0]
  join_code varchar [not null]
  created_at timestamp [default: `now()`]
  started_at timestamp
  finished_at timestamp

  indexes {
    join_code [unique]
    organizer_id
  }

  Note: 'CHECK: format = \'commander\'; status IN (\'registration\', \'in_progress\', \'finished\') (migration 00016_tournaments.sql)'
}

// Either an app user (user_id set, brings one of their own decks via deck_id) or a
// guest with no account (guest_name set, commander_name free text -- a guest has no
// decks row to point at).
Table tournament_participants {
  id uuid [primary key]
  tournament_id uuid [ref: > tournaments.id, not null]
  user_id uuid [ref: > users.id, null]
  guest_name varchar [null]
  deck_id uuid [ref: > decks.id, null]
  commander_name varchar [null]
  points int [not null, default: 0]
  created_at timestamp [default: `now()`]

  indexes {
    (tournament_id, user_id) [unique, note: 'Partial WHERE user_id IS NOT NULL -- an app user can only register once per tournament; guests have no such cap']
    tournament_id
    deck_id
  }

  Note: 'CHECK: (user_id set XOR guest_name set); (deck_id IS NOT NULL OR commander_name IS NOT NULL) (migration 00016_tournaments.sql)'
}

Table tournament_rounds {
  id uuid [primary key]
  tournament_id uuid [ref: > tournaments.id, not null]
  round_number int [not null]
  status varchar [not null, default: 'pending', note: 'pending, finished']
  created_at timestamp [default: `now()`]
  finished_at timestamp

  indexes {
    (tournament_id, round_number) [unique]
    tournament_id
  }

  Note: 'CHECK: status IN (\'pending\', \'finished\') (migration 00016_tournaments.sql)'
}

Table tournament_tables {
  id uuid [primary key]
  tournament_round_id uuid [ref: > tournament_rounds.id, not null]
  table_number int [not null]

  indexes {
    (tournament_round_id, table_number) [unique]
    tournament_round_id
  }
}

// Friend requests between two app users (Stage 9, "Social"). Distinct from
// playgroups (game groups): a playgroup member add takes effect immediately,
// a friend request needs the addressee's accept. Migration 00017_friend_requests.sql.
Table friend_requests {
  id uuid [primary key]
  requester_id uuid [ref: > users.id, not null]
  addressee_id uuid [ref: > users.id, not null]
  status varchar [not null, default: 'pending', note: 'pending, accepted, rejected, cancelled']
  created_at timestamp [default: `now()`]
  responded_at timestamp [null, note: 'Set when the request is accepted, rejected or cancelled']

  indexes {
    (requester_id, addressee_id) [unique, note: 'Partial UNIQUE WHERE status = pending -- prevents a duplicate pending request in the same direction']
    addressee_id [note: 'FK coverage + hot path: list incoming requests']
    requester_id [note: 'FK coverage + hot path: list outgoing requests']
  }

  Note: 'CHECK: requester_id <> addressee_id; status IN (pending, accepted, rejected, cancelled) (migration 00017_friend_requests.sql). An accepted row IS the friendship -- no separate friends table; query WHERE (requester_id=X OR addressee_id=X) AND status=accepted. The reverse-direction race (both users request each other before either responds) is auto-accepted by the service instead of inserting a second row, not a DB constraint.'
}

Table tournament_table_seats {
  id uuid [primary key]
  tournament_table_id uuid [ref: > tournament_tables.id, not null]
  tournament_participant_id uuid [ref: > tournament_participants.id, not null]
  finish_position int [null, note: 'Null until the organizer records the table result; 1-4']
  points_awarded int [not null, default: 0, note: '1st=2, 2nd=1, 3rd/4th=0']

  indexes {
    (tournament_table_id, tournament_participant_id) [unique]
    tournament_table_id
    tournament_participant_id
  }

  Note: 'CHECK: finish_position BETWEEN 1 AND 4 (migration 00016_tournaments.sql)'
}
